Fix poly right overflow bug

--- a/marketplace/src/app/app.component.scss
+++ b/marketplace/src/app/app.component.scss
@@ -7,6 +7,13 @@
   top: 0;
 }
 
+.poly-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .bg-svg-1 {
   position: absolute;
   width: 1920px;
